--- a/GD2/Server/MISA.Fresher.WorkScheduling/MISA.Fresher.WorkScheduling.Core/MISA.Fresher.WorkScheduling.Core.csproj
+++ b/GD2/Server/MISA.Fresher.WorkScheduling/MISA.Fresher.WorkScheduling.Core/MISA.Fresher.WorkScheduling.Core.csproj
@@ -5,8 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
     <Folder Include="Resources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
