--- a/GD2/Server/MISA.Fresher.WorkScheduling/MISA.Fresher.WorkScheduling/MISA.Fresher.WorkScheduling.csproj
+++ b/GD2/Server/MISA.Fresher.WorkScheduling/MISA.Fresher.WorkScheduling/MISA.Fresher.WorkScheduling.csproj
@@ -1,21 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\MISA.Fresher.WorkScheduling.Core\MISA.Fresher.WorkScheduling.Core.csproj" />
-    <ProjectReference Include="..\MISA.Fresher.WorkScheduling.Infrastructure\MISA.Fresher.WorkScheduling.Infrastructure.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\MISA.Fresher.WorkScheduling.Core\MISA.Fresher.WorkScheduling.Core.csproj" />
+		<ProjectReference Include="..\MISA.Fresher.WorkScheduling.Infrastructure\MISA.Fresher.WorkScheduling.Infrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
